0. Stream API улучшения [#58167 #561356]